Layouts and animation added

--- a/app/src/main/res/layout/activity_login_activtiy.xml
+++ b/app/src/main/res/layout/activity_login_activtiy.xml
@@ -9,14 +9,14 @@
     <ImageView
         android:id="@+id/att_sys_logo"
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/att_sys"
+        android:src="@drawable/att_sys_small_logo"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_centerInParent="true"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/item_edit_text_background"
         android:gravity="center"
         android:hint="Username"
